--- a/public/css/framework.css
+++ b/public/css/framework.css
@@ -1,6 +1,6 @@
 .container{
-	padding-right: 15px;
-  	padding-left: 15px;
+	/* padding-right: 15px;
+  	padding-left: 15px; */
   	margin-right: auto;
   	margin-left: auto;
 }
@@ -117,6 +117,7 @@
 
 .img-responsive{
 	max-width: 100%;
+	width: 100%; /* add by me @juanjo */
 	height: auto;
 	display: block;
 }
