--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -34,9 +34,11 @@
 	.video iframe{
 		height: 247px;
 	}
+
 	.gallery-photos figure img{
 		width: 426px !important;
-		height: auto;
+		height: 220;
+		overflow: hidden;
 	}
 	.image-w-text .image-w-text figure{
 		float: none !important;
