--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,12 @@ header nav li a:hover{
     top: 30px;
     text-transform: capitalize;
 }
+
+.post .category a{ /* by @juanjo */
+	color: inherit;
+	font-size: inherit;
+}
+
 .post figure{
 	margin:0;
 }
@@ -65,6 +71,16 @@ header nav li a:hover{
 .post .tag{
 	margin: 0 5px;
 }
+
+.post .tag a{
+	color: inherit;
+	font-size: inherit;
+}
+
+.post .tag a:hover{
+	color: #1abc9c;
+}
+
 .post footer{
 	margin-top: 45px;
 	background: none;
@@ -74,16 +90,18 @@ header nav li a:hover{
     column-count: 2;
     -moz-column-count: 2;
     -webkit-column-count: 2;
-    column-gap: 4px;
-    -moz-column-gap: 4px;
-    -webkit-column-gap: 4px;
+    column-gap: 0px;
+    -moz-column-gap: 0px;
+    -webkit-column-gap: 0px;
 }
 .masonry .gallery-image {
-    display: inline-block;
+   /*  display: inline-block;  comment by me @juanjo  */
     width: 100%;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px;
     padding: 4px;
-    border: 1px solid #000;
+    border: 1px solid #000; */
+
+	display: flex;
 }
 cite, .cite{
 	font-size: 22px;
@@ -267,7 +285,87 @@ a.btn-bar{
           right: 7px;
           
       }
-      
+
+.nav-item .nav-link:hover{
+	color: #bdbdbd;
+}
+
+/* .buttons-social-media-share .share-buttons{
+	display: flex;
+	margin: 0;
+	padding: 0;
+}
+
+.buttons-social-media-share .share-buttons li{
+	list-style-type: none;
+	margin-right: 10px;
+	margin-bottom: 10px;
+}
+
+.buttons-social-media-share .share-buttons li a i{
+	font-size: 30px;
+} */
+
+#social-links{
+	margin-bottom: 10px;
+}
+
+#social-links ul{
+	display: flex;
+	gap: 2;
+	margin: 0;
+	padding: 0;
+}
+
+#social-links ul li{
+	list-style-type: none;
+	margin-right: 10px;
+}
+
+#social-links ul li a{
+	font-size: 30px;
+}
+
+.fa-facebook-square{
+	color: #3b5998;
+}
+
+.fa-twitter{
+	color: #1DA1F2;
+}
+
+.fa-whatsapp{
+	color: #25D366;
+}
+
+.gallery-image{
+	position: relative;
+}
+
+.img-post-gallery{
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+	overflow: hidden;
+}
+
+.overlay{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	color: #ffff;
+	font-size: 30px;
+	background-color: rgba(0,0,0,.5);
+
+	/* flex */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.carousel-inner .carousel-item img{
+	width: 100%;
+}
       
 
 
